// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupPage renders 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header
      class="mb-2 shadow shadow-md"
    >
      <div
        class="main-container main-container--content pr-0"
      >
        <div
          class="flex font-serif self-center text-left"
        >
          <a
            class="flex-1 focus:outline-none focus:ring-2 focus:ring-red-600"
            href="/"
          >
            [Translation for https://example.com/global/translations.ttl#appName does not exist]
          </a>
        </div>
      </div>
      <nav
        class="pages-nav pages-nav--main-menu"
      >
        <ul
          class="pages-nav__list pages-nav__list--main-menu"
        >
          <li
            class="flex"
            data-testid="main-nav-list-item"
          >
            <a
              class="pages-nav__link pages-nav__link--main-menu"
              href="/characters"
            >
              [Translation for https://example.com/global/translations.ttl#charactersPageTitle does not exist]
            </a>
          </li>
          <li
            class="flex"
            data-testid="main-nav-list-item"
          >
            <a
              class="pages-nav__link pages-nav__link--main-menu"
              href="/rules"
            >
              [Translation for https://example.com/global/translations.ttl#rulesPageTitle does not exist]
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <button
      class="bg-black fixed top-0 left-0 w-screen h-screen opacity-80 z-0 xl:hidden z-10 hidden"
      data-testid="layout-fade"
      type="button"
    >
       
    </button>
    <div
      class="main-container main-container--content main-container--main lg:flex-1 flex flex-col lg:flex-row lg:space-x-2"
    >
      <div
        class="layout__sub-menu lg:flex-1 hidden lg:block"
        data-testid="layout-sub-menu"
      />
      <div
        class="lg:flex-auto flex flex-col max-w-prose min-h-full"
      >
        <main
          class="flex-1"
        >
          <div
            class="content leading-normal max-w-prose mx-auto"
            style="hyphens: auto;"
          >
            <h1>
              [Translation for https://example.com/global/translations.ttl#signupTitle does not exist]
            </h1>
            <p>
              [Translation for https://example.com/global/translations.ttl#signupPitch does not exist]
            </p>
          </div>
          <ul
            class="flex flex-wrap justify-center my-8"
          >
            <li
              class="text-center m-2"
            >
              <a
                class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300 text-gray-800 dark:text-gray-800"
                href="https://signup.pod.inrupt.com/"
              >
                <img
                  alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
                  class="mx-auto max-h-20"
                  src="/logos/inrupt-ps-logo.png"
                />
                <span
                  class="text-xl font-bold"
                >
                  Inrupt Pod Spaces
                </span>
              </a>
            </li>
            <li
              class="text-center m-2"
            >
              <a
                class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300 text-gray-800 dark:text-gray-800"
                href="https://solidcommunity.net/register"
              >
                <img
                  alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
                  class="mx-auto max-h-20"
                  src="/logos/solid-emblem.svg"
                />
                <span
                  class="text-xl font-bold"
                >
                  solidcommunity.net
                </span>
              </a>
            </li>
            <li
              class="text-center m-2"
            >
              <a
                class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300 text-gray-800 dark:text-gray-800"
                href="https://inrupt.net/register"
              >
                <img
                  alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
                  class="mx-auto max-h-20"
                  src="/logos/solid-emblem.svg"
                />
                <span
                  class="text-xl font-bold"
                >
                  inrupt.net
                </span>
              </a>
            </li>
          </ul>
          <div
            class="content leading-normal max-w-prose mx-auto"
            style="hyphens: auto;"
          >
            <p
              class="text-center"
            >
              <a
                href="/login"
              >
                [Translation for https://example.com/global/translations.ttl#logInPrompt does not exist]
              </a>
            </p>
          </div>
          <aside
            class="my-16"
          >
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
          </aside>
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
            </a>
            <a
              class="link"
              href="/faq"
            >
              [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
              </span>
            </button>
          </div>
        </footer>
      </div>
      <div
        class="hidden lg:block lg:flex-1"
      />
      <div
        class="layout__right-menu xl:flex-1 xl:-top-2 xl:-mb-2 bg-gray-100 dark:bg-gray-900 xl:bg-transparent xl:dark:bg-transparent hidden"
      >
        <div>
          <button
            class="button button--close text-left"
            data-testid="session-close-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             [Translation for https://example.com/global/translations.ttl#close does not exist]
          </button>
          <div
            class="p-4 text-center"
          >
            <h2
              class="font-bold text-xl"
            >
              [Translation for https://example.com/global/translations.ttl#recommendedIdPSet does not exist]
            </h2>
            <ul
              class="flex flex-col space-y-2 my-2"
            >
              <li>
                <button
                  class="button button--solid w-full"
                  data-testid="login-button"
                  type="button"
                >
                  Inrupt Pod Spaces
                </button>
              </li>
              <li>
                <button
                  class="button button--solid w-full"
                  data-testid="login-button"
                  type="button"
                >
                  solidcommunity.net
                </button>
              </li>
              <li>
                <button
                  class="button button--solid w-full"
                  data-testid="login-button"
                  type="button"
                >
                  inrupt.net
                </button>
              </li>
            </ul>
            <h2
              class="line-behind font-bold text-xl"
            >
              <span
                class="line-behind__line"
              />
              <span
                class="bg-gray-100 dark:bg-gray-900 lg:bg-white lg:dark:bg-gray-800"
              >
                [Translation for https://example.com/global/translations.ttl#or does not exist]
              </span>
            </h2>
            <form
              class="mt-2 md:mt-0 text-left"
            >
              <img
                alt="[Translation for https://example.com/global/translations.ttl#logInImage does not exist]"
                class="mx-auto hidden md:block"
                src="/logos/solid-emblem.svg"
                style="max-width: 200px;"
              />
              <label
                class="label"
                for="idp"
              >
                [Translation for https://example.com/global/translations.ttl#solidIdP does not exist]
                <input
                  class="input"
                  data-testid="login-form-idp-field"
                  id="idp"
                  placeholder="https://"
                  required=""
                  type="url"
                  value=""
                />
              </label>
              <label
                class="label"
                for="rememberIdp"
              >
                <input
                  class="checkbox"
                  data-testid="login-form-remember-checkbox"
                  id="rememberIdp"
                  type="checkbox"
                />
                <span
                  class="label__text"
                >
                  [Translation for https://example.com/global/translations.ttl#rememberIdP does not exist]
                </span>
              </label>
              <button
                class="button w-full"
                data-testid="login-form-button"
                type="submit"
              >
                [Translation for https://example.com/global/translations.ttl#logIn does not exist]
              </button>
              <div
                class="mt-4"
              >
                <a
                  class="link"
                  href="/signup"
                >
                  [Translation for https://example.com/global/translations.ttl#signupSolidPrompt does not exist]
                </a>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignupPage renders a warning when authenticated 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header
      class="mb-2 shadow shadow-md"
    >
      <div
        class="main-container main-container--content pr-0"
      >
        <div
          class="flex font-serif self-center text-left"
        >
          <a
            class="flex-1 focus:outline-none focus:ring-2 focus:ring-red-600"
            href="/"
          >
            [Translation for https://example.com/global/translations.ttl#appName does not exist]
          </a>
        </div>
      </div>
      <nav
        class="pages-nav pages-nav--main-menu"
      >
        <ul
          class="pages-nav__list pages-nav__list--main-menu"
        >
          <li
            class="flex"
            data-testid="main-nav-list-item"
          >
            <a
              class="pages-nav__link pages-nav__link--main-menu"
              href="/characters"
            >
              [Translation for https://example.com/global/translations.ttl#charactersPageTitle does not exist]
            </a>
          </li>
          <li
            class="flex"
            data-testid="main-nav-list-item"
          >
            <a
              class="pages-nav__link pages-nav__link--main-menu"
              href="/rules"
            >
              [Translation for https://example.com/global/translations.ttl#rulesPageTitle does not exist]
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <button
      class="bg-black fixed top-0 left-0 w-screen h-screen opacity-80 z-0 xl:hidden z-10 hidden"
      data-testid="layout-fade"
      type="button"
    >
       
    </button>
    <div
      class="main-container main-container--content main-container--main lg:flex-1 flex flex-col lg:flex-row lg:space-x-2"
    >
      <div
        class="layout__sub-menu lg:flex-1 hidden lg:block"
        data-testid="layout-sub-menu"
      />
      <div
        class="lg:flex-auto flex flex-col max-w-prose min-h-full"
      >
        <main
          class="flex-1"
        >
          <div
            class="content leading-normal max-w-prose mx-auto"
            style="hyphens: auto;"
          >
            <h1>
              [Translation for https://example.com/global/translations.ttl#signupTitle does not exist]
            </h1>
            <div
              data-testid="logged-in-already-warning"
            >
              <div
                class="bg-yellow-200 text-yellow-900 border-yellow-400 border px-2 py-1 rounded-sm mb-2"
              >
                [Translation for https://example.com/global/translations.ttl#LoggedInAlready does not exist]
              </div>
            </div>
            <p>
              [Translation for https://example.com/global/translations.ttl#signupPitch does not exist]
            </p>
          </div>
          <ul
            class="flex flex-wrap justify-center my-8"
          >
            <li
              class="text-center m-2"
            >
              <a
                class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300 text-gray-800 dark:text-gray-800"
                href="https://signup.pod.inrupt.com/"
              >
                <img
                  alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
                  class="mx-auto max-h-20"
                  src="/logos/inrupt-ps-logo.png"
                />
                <span
                  class="text-xl font-bold"
                >
                  Inrupt Pod Spaces
                </span>
              </a>
            </li>
            <li
              class="text-center m-2"
            >
              <a
                class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300 text-gray-800 dark:text-gray-800"
                href="https://solidcommunity.net/register"
              >
                <img
                  alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
                  class="mx-auto max-h-20"
                  src="/logos/solid-emblem.svg"
                />
                <span
                  class="text-xl font-bold"
                >
                  solidcommunity.net
                </span>
              </a>
            </li>
            <li
              class="text-center m-2"
            >
              <a
                class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300 text-gray-800 dark:text-gray-800"
                href="https://inrupt.net/register"
              >
                <img
                  alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
                  class="mx-auto max-h-20"
                  src="/logos/solid-emblem.svg"
                />
                <span
                  class="text-xl font-bold"
                >
                  inrupt.net
                </span>
              </a>
            </li>
          </ul>
          <div
            class="content leading-normal max-w-prose mx-auto"
            style="hyphens: auto;"
          >
            <p
              class="text-center"
            >
              <a
                href="/login"
              >
                [Translation for https://example.com/global/translations.ttl#logInPrompt does not exist]
              </a>
            </p>
          </div>
          <aside
            class="my-16"
          >
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
          </aside>
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
            </a>
            <a
              class="link"
              href="/faq"
            >
              [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
              </span>
            </button>
          </div>
        </footer>
      </div>
      <div
        class="hidden lg:block lg:flex-1"
      />
      <div
        class="layout__right-menu xl:flex-1 xl:-top-2 xl:-mb-2 bg-gray-100 dark:bg-gray-900 xl:bg-transparent xl:dark:bg-transparent hidden"
      >
        <div>
          <button
            class="button button--close text-left"
            data-testid="session-close-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             [Translation for https://example.com/global/translations.ttl#close does not exist]
          </button>
          <p>
            [Translation for https://example.com/global/translations.ttl#loggedIn does not exist]
          </p>
          <button
            class="button w-full"
            data-testid="authenticated-logout-button"
            type="button"
          >
            [Translation for https://example.com/global/translations.ttl#logOut does not exist]
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
